# Phoenix

./: README.md  phoenix.repos
.github/workflows/: main.yml
phoenix_description/: CMakeLists.txt  package.xml
phoenix_description/rviz/: phoenix_gazebo.rviz
phoenix_description/urdf/: phoenix.urdf
phoenix_gazebo/: CMakeLists.txt  package.xml
phoenix_gazebo/config/joystick/: xbone.config.yaml
phoenix_gazebo/config/navsat_transform/: navsat_transform.yaml
phoenix_gazebo/config/robot_localization/: robot_localization.yaml
phoenix_gazebo/launch/: common.launch.py  data_collect.launch.py  inference.launch.py  phoenix.launch.py  sim.launch.py
phoenix_gazebo/launch/include/data_logger/: data_logger.launch.py
phoenix_gazebo/launch/include/gazebo/: gazebo.launch.py
phoenix_gazebo/launch/include/gps_waypoint_publisher/: gps_waypoint_publisher.launch.py
phoenix_gazebo/launch/include/gz_io_ros/: gz_io_ros.launch.py
phoenix_gazebo/launch/include/hybrid_pp/: hybrid_pp.launch.py
phoenix_gazebo/launch/include/logi_g29/: logi_g29.launch.py
phoenix_gazebo/launch/include/obj_detector/: dual_camera.launch.py  obj_detector.launch.py
phoenix_gazebo/launch/include/obj_planner/: obj_planner.launch.py
phoenix_gazebo/launch/include/obj_tracker/: obj_tracker.launch.py
phoenix_gazebo/launch/include/polynomial_planner/: polynomial_planner.launch.py  polynomial_planner_ai.launch.py
phoenix_gazebo/launch/include/road_detectors/: obj_detector_ai.launch.py  obj_detector_cv.launch.py
phoenix_gazebo/launch/include/robot_localization/: robot_localization.launch.py
phoenix_gazebo/launch/include/rtab_map_odom/: rgdb_vio.launch.py
phoenix_gazebo/launch/include/rviz/: rviz.launch.py
phoenix_gazebo/launch/include/sensor_processor/: sensor_processor.launch.py
phoenix_gazebo/launch/include/state_publishers/: state_publishers.launch.py
phoenix_gazebo/launch/include/teleop_ack_joy/: teleop_ack_joy.launch.py
phoenix_gazebo/launch/include/teleop_ack_rc/: teleop_ack_rc.launch.py
phoenix_gazebo/launch/include/twist_to_ackermann/: twist_to_ackermann.launch.py
phoenix_gazebo/launch/include/webots/: webots.launch.py
phoenix_gazebo/models/isc_cone/: Cone.STL  cone.dae
phoenix_gazebo/models/phoenix_elements/: phoenix_3Dmodel__blackStructure.mtl  phoenix_3Dmodel__blueStructure.mtl  phoenix_3Dmodel__frontBumper.mtl  phoenix_3Dmodel__metalStructure.mtl  phoenix_3Dmodel__redEstop.mtl  phoenix_3Dmodel__yellowMichigan.mtl
phoenix_gazebo/models/purdue_track/: track.dae
phoenix_gazebo/models/purdue_track_good_areas/: track.dae
phoenix_gazebo/webots_project/: resetinerta.c
phoenix_gazebo/webots_project/controllers/reset_inertia/: reset_inertia.c
phoenix_gazebo/webots_project/protos/: Isc_Cone.proto  Phoenix.proto  Phoenix2.proto  PhoenixV2.proto  homedepotbox.proto
phoenix_gazebo/webots_project/worlds/: .purdue_track.wbproj  purdue_track.wbt
phoenix_gazebo/webots_project/worlds/forest/: -745.forest  -759.forest  -767.forest
phoenix_gazebo/worlds/: my_world.wbt  purdue_gp_track.sdf  sonoma.sdf  track_with_cones.sdf
phoenix_robot/: CMakeLists.txt  package.xml
phoenix_robot/config/navsat_transform/navsat_transform/: navsat_transform.yaml  yaml
phoenix_robot/config/oakd/: camera.yaml  cameral.yaml  camerar.yaml
phoenix_robot/config/phnx_io_ros/: phnx_io_ros.yaml  phoenix_io_ros.yaml
phoenix_robot/config/robot_localization/: robot_localization.yaml  robot_localization_dual_ekf.yaml  robot_localization_encoder_only.yaml  robot_localization_gps_encoder_imu.yaml
phoenix_robot/config/ros2_sick/: sick_lms111.yaml
phoenix_robot/config/vectornav/: vectornav.yaml
phoenix_robot/launch/: README.md  auton-no-drive.launch.py  common.launch.py  data_collect.launch.py  no-camera.launch.py  only-camera.launch.py  utilibot.launch.py
phoenix_robot/launch/include/navsat_transform/: navsat_transform.launch.py
phoenix_robot/launch/include/oakd/: dual_cameras.launch.py  oakd.launch.py
phoenix_robot/launch/include/phnx_io_ros/: phnx_io_ros.launch.py
phoenix_robot/launch/include/robot_localization/: robot_localization.launch.py
phoenix_robot/launch/include/teleop_ack_rc/: teleop_ack_rc.launch.py
phoenix_robot/launch/include/vectornav/: vectornav.launch.py
phoenix_robot/launch/teleop/: teleop_only_kartside.launch.py  teleop_only_kartside.py
scripts/: find_adhoc_interface.py  setup_adhoc_client.bash  setup_adhoc_pc.bash
